--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #FFE5D4;
+  background: linear-gradient(to top, #FAD2E1 65%, #FFFFFF);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
@@ -16,6 +16,8 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 100%;
+  min-height: 500px;
 }
 main section p {
   width: 75%;
@@ -67,6 +69,7 @@ main form {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 .titulo .partetitulo {
   background-color: #FAD2E1;
@@ -87,7 +90,6 @@ main form {
   flex-direction: column;
   align-items: center;
   margin-top: 70px;
-  border: 1px solid rgb(240, 137, 137);
 }
 
 .bloquerow {
