--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ main form {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding: 10px;
 }
 .titulo .partetitulo {
   background-color: #FAD2E1;
@@ -83,13 +84,13 @@ main form {
   display: none;
 }
 .titulo .partetituloDivOculto {
-  background: linear-gradient(to bottom, #FAD2E1, #FFFFFF);
   width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   margin-top: 70px;
+  padding: 10px;
 }
 
 .bloquerow {
@@ -110,6 +111,14 @@ main form {
   text-decoration: none;
   cursor: pointer;
   margin: 5px;
+}
+
+.rosahaciaabajo {
+  background: linear-gradient(to bottom, #FAD2E1, #FFFFFF);
+}
+
+.rosahaciaarriba {
+  background: linear-gradient(to top, #FAD2E1 55%, #FFFFFF);
 }
 
 /*# sourceMappingURL=styles.css.map */
